bootstrap/apps/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /argocd
        pathType: ImplementationSpecific
        backend:
          service: 
            name: argocd-server
            port: 
              name: http
  tls:
  - hosts:
    - localhost
    secretName: tls.localhost
