bootstrap/apps/argocd/rollouts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollouts
spec:
  ingressClassName: nginx
  rules:
  - host: rollouts.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service: 
            name: argo-rollouts-dashboard 
            port: 
              number: 3100
  tls:
  - hosts:
    - rollouts.127.0.0.1.nip.io
    secretName: rollouts-tls
