bootstrap/apps/argocd/workflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workflows
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
  - host: workflows.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service: 
            name: argo-server
            port: 
              name: web
  tls:
  - hosts:
    - workflows.127.0.0.1.nip.io
    secretName: workflows-tls
